--- a/contacto.html
+++ b/contacto.html
@@ -12,7 +12,7 @@
 
         <h2>FORMULARIO DE CONTACTO</h2>
 
-        <form action="" method="post">
+        <form action="error.html" method="">
             <label for="usuario">Ingrese su nombre:</label><br>
             <input type="text" placeholder="Digite su nombre" maxlength="50" name="usuario" id="usuario">
             <br>
