formulario de contacto

--- a/contacto.html
+++ b/contacto.html
@@ -12,16 +12,16 @@
 
         <h2>FORMULARIO DE CONTACTO</h2>
 
-        <form action="error.html" method="">
+        <form action="" method="POST">
             <label for="usuario">Ingrese su nombre:</label><br>
             <input type="text" placeholder="Digite su nombre" maxlength="50" name="usuario" id="usuario">
             <br>
 
-            <label for="subject">Asunto:</label><br>
-            <input type="text" placeholder="Digite su asunto" maxlength="50" name="subject" id="subject">
+            <label for="asunto">Asunto:</label><br>
+            <input type="text" placeholder="Digite su asunto" maxlength="50" name="asunto" id="asunto">
             <br>
 
-            <label for="email">Ingrese su mensaje</label><br>
+            <label for="email">Ingrese su email</label><br>
             <input type="email" placeholder="Digite su email" maxlength="50" name="email" id="email">
             <br>
 
@@ -29,8 +29,9 @@
             <textarea name="message" id="message" placeholder="Digite su mensaje"></textarea>
             <br>
             <br>
+            <hr>
 
-            <input type="submit" name="submit" id="submit">
+            <input type="submit" name="enviar" id="enviar">
             <input type="button" value="Cancelar">
 
 
