--- a/contacto.html
+++ b/contacto.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de Contacto</title>
+    <link rel="stylesheet" href="css/formulario.css">
 </head>
 <body>
     
@@ -13,11 +14,11 @@
         <h2>FORMULARIO DE CONTACTO</h2>
 
         <form action="" method="POST">
-            <label for="usuario">Ingrese su nombre:</label><br>
+            <label for="usuario">Ingrese su nombre</label><br>
             <input type="text" placeholder="Digite su nombre" maxlength="50" name="usuario" id="usuario">
             <br>
 
-            <label for="asunto">Asunto:</label><br>
+            <label for="asunto">Asunto</label><br>
             <input type="text" placeholder="Digite su asunto" maxlength="50" name="asunto" id="asunto">
             <br>
 
@@ -25,14 +26,13 @@
             <input type="email" placeholder="Digite su email" maxlength="50" name="email" id="email">
             <br>
 
-            <label for="message">Ingrese su mensaje:</label><br>
+            <label for="message">Ingrese su mensaje</label><br>
             <textarea name="message" id="message" placeholder="Digite su mensaje"></textarea>
             <br>
             <br>
             <hr>
 
             <input type="submit" name="enviar" id="enviar">
-            <input type="button" value="Cancelar">
 
 
         </form>
