--- a/index.html
+++ b/index.html
@@ -1,62 +1,59 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Hoja de Vida</title>
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/style.css" />
+  <title>Hoja de Vida</title>
+</head>
+
+<body>
+
+  <div>
+
     <nav>
-      <img
-        src="https://upload.wikimedia.org/wikipedia/commons/5/50/Verhnee_Shavlinskoe_ozero_panorama.jpg"
-        alt="Panorama of Verhnee Shavlinskoe ozero"
-      />
+      <img src="https://upload.wikimedia.org/wikipedia/commons/5/50/Verhnee_Shavlinskoe_ozero_panorama.jpg"
+        alt="Panorama of Verhnee Shavlinskoe ozero" />
     </nav>
 
     <header>
       <h1>LUIS VICENTE ALBARRACIN ALBARRACIN</h1>
       <h2>Fecha de Nacimiento: 27/09/1997</h2>
     </header>
-   
+
 
     <main>
-      <div>
+      <section>
         <p>
-          Hola, soy Luis Vicente Albarracin Albarracin, soy de la ciudad de
-          Cúcuta, naci el 27 de septiembre de 1997, en mi infancia solia jugar
-          futbol y videojuegos de XBOX como Halo y futbol 8 con
-          mis amigos. Tambien vi animes como Dragon Ball Z, Naruto, One Piece,
-          Death Note. En decimo de bachillerato aprendi un poco de programación
-          en C++ y me interese por todo lo que podia hacer programando. Viaje a
-          Ibague y Bogota en la navidad del 2012, tambien estuve en un par de
-          ocaciones en Venezuela.
+          Hola, soy Luis Vicente Albarracin Albarracin, soy de la ciudad de Cúcuta, nací el 27 de septiembre de 1997, en
+          mi infancia solía jugar futbol y videojuegos de XBOX como Halo y futbol 8 con mis amigos. También vi animes
+          como Dragon Ball Z, Naruto, One Piece, Death Note. En décimo de bachillerato aprendí un poco de programación
+          en C++ y me interese por todo lo que podía hacer programando. Viaje a Ibagué y Bogotá en la navidad del 2012,
+          también estuve en un par de ocasiones en Venezuela.
         </p>
         <p>
-          Empece la carrera de Ingeniería de Sistemas el primer semestre de
-          2015, lo más complicado de la carrera fueron los primeros semestres,
-          me tomo mucho tiempo aprender la programación orientada a objetos en
-          java, ademas de las materias donde hay mucho trabajo en grupo. Lo que
-          mas me gusta de la carrera es los recursos que le brinda a los
-          estudiantes y la motivacion que fomenta en nosotros . En cinco años
-          espero ser un ingeniero graduado y estar trabajando en mis proyectos
-          personales o en gran empresa nacional o internacional de tecnologia.
+          Empece la carrera de Ingeniería de Sistemas el primer semestre de 2015, lo más complicado de la carrera fueron
+          los primeros semestres, me tomo mucho tiempo aprender la programación orientada a objetos en java, ademas de
+          las materias donde hay mucho trabajo en grupo. Lo que mas me gusta de la carrera es los recursos que le brinda
+          a los estudiantes y la motivación que fomenta en nosotros . En cinco años espero ser un ingeniero graduado y
+          estar trabajando en mis proyectos personales o en gran empresa nacional o internacional de tecnología.
         </p>
-      </div>
+      </section>
 
-      <div>
+      <section>
         <h3>Mis Hobbies</h3>
         <ul>
           <li>Escuchar Musica</li>
           <li>Jugar League of legends</li>
           <li>Aprender lenguajes de programación</li>
           <li>Leer One piece</li>
-          <li>Hacer cursos en linea sobre tecnologias para el desarrollo</li>
+          <li>Hacer cursos en linea sobre tecnologías para el desarrollo</li>
         </ul>
-      </div>
+      </section>
 
-      <div>
+      <section>
         <h3>Mis películas y series favoritas</h3>
         <ul>
           <li>Breaking Bad</li>
@@ -67,48 +64,48 @@
           <li>Halo</li>
           <li>Grand theft auto: San Andreas</li>
         </ul>
-      </div>
+      </section>
 
-      <div>
+      <section>
         <h3>Mi canción favorita</h3>
         <audio controls>
           <source src="audio/roulette.mp3" type="audio/mpeg" />
           Tu navegador no soporta el elemento audio.
         </audio>
-      </div>
+      </section>
 
-      <div>
+      <section>
         <h3>Mis materias favoritas</h3>
-        <table>
+        <table id="materias">
           <tr>
             <th>Materia</th>
             <th>Nota</th>
             <th>Porque es de las favoritas</th>
           </tr>
           <tr>
-            <td>Fisica Mecanica</td>
+            <td>Física Mecánica</td>
             <td>4</td>
-            <td>Porque aprendi mucho sobre la fisica de clasica</td>
+            <td>Porque aprendí mucho sobre la fisica de clasica</td>
           </tr>
           <tr>
             <td>Base de Datos</td>
             <td>4</td>
             <td>
-              Porque aprendi como insertar y consultar en una base de datos
+              Porque aprendí como insertar y consultar en una base de datos
             </td>
           </tr>
           <tr>
             <td>Sistemas Operativos</td>
             <td>3.3</td>
             <td>
-              Porque aprendi como el sistema operativo organiza los procesos
+              Porque aprendí como el sistema operativo organiza los procesos
             </td>
           </tr>
           <tr>
             <td>Arquitectura de Computadores</td>
             <td>3</td>
             <td>
-              Porque aprendi mucho sobre el funcionamiento de un computador, sus
+              Porque aprendí mucho sobre el funcionamiento de un computador, sus
               partes de hardware y software y la programación bajo nivel
               ensamblador
             </td>
@@ -122,11 +119,14 @@
             </td>
           </tr>
         </table>
-      </div>
+      </section>
     </main>
 
     <footer>
       <a href="contacto.html">Contacto</a>
     </footer>
-  </body>
+
+  </div>
+</body>
+
 </html>
