--- a/contacto.html
+++ b/contacto.html
@@ -13,9 +13,9 @@
 
         <h2>FORMULARIO DE CONTACTO</h2>
 
-        <form action="" method="POST">
-            <label for="usuario">Ingrese su nombre</label><br>
-            <input type="text" placeholder="Digite su nombre" maxlength="50" name="usuario" id="usuario">
+        <form action="https://above-named-oscilla.000webhostapp.com/correo.php" method="POST">
+            <label for="name">Ingrese su nombre</label><br>
+            <input type="text" placeholder="Digite su nombre" maxlength="50" name="name" id="name">
             <br>
 
             <label for="asunto">Asunto</label><br>
@@ -27,7 +27,7 @@
             <br>
 
             <label for="message">Ingrese su mensaje</label><br>
-            <textarea name="message" id="message" placeholder="Digite su mensaje"></textarea>
+            <textarea name="message" id="msg" placeholder="Digite su mensaje"></textarea>
             <br>
             <br>
             <hr>
