--- a/contacto.html
+++ b/contacto.html
@@ -13,7 +13,7 @@
 
         <h2>FORMULARIO DE CONTACTO</h2>
 
-        <form action="https://above-named-oscilla.000webhostapp.com/correo.php" method="POST">
+        <form action="php/correo.php" method="POST">
             <label for="name">Ingrese su nombre</label><br>
             <input type="text" placeholder="Digite su nombre" maxlength="50" name="name" id="name">
             <br>
@@ -26,8 +26,8 @@
             <input type="email" placeholder="Digite su email" maxlength="50" name="email" id="email">
             <br>
 
-            <label for="message">Ingrese su mensaje</label><br>
-            <textarea name="message" id="msg" placeholder="Digite su mensaje"></textarea>
+            <label for="msg">Ingrese su mensaje</label><br>
+            <textarea name="msg" id="msg" placeholder="Digite su mensaje"></textarea>
             <br>
             <br>
             <hr>
